--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "hbs": "~3.1.0",
+    "heroku": "^0.1.3",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
