--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
-    "serve-favicon": "~2.3.0"
+    "request": "^2.67.0",
+    "serve-favicon": "~2.3.0",
+    "xml2js": "^0.4.15"
   }
 }
