--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.7.1",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "express": "~4.13.1",
@@ -19,11 +20,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
     "request": "^2.67.0",
-<<<<<<< HEAD
-    "serve-favicon": "~2.3.0"
-=======
     "serve-favicon": "~2.3.0",
     "xml2js": "^0.4.15"
->>>>>>> 30fe72ff1b195796305d1cdfbc8985e87b16edab
   }
 }
