--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-facebook": "^2.0.0",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0",
+    "unirest": "^0.4.2",
     "xml2js": "^0.4.15"
   }
 }
