--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
@@ -16,10 +17,13 @@
     "fb": "^0.7.3",
     "hbs": "~3.1.0",
     "heroku": "^0.1.3",
+    "jsonwebtoken": "^5.5.4",
     "knex": "^0.9.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^4.4.3",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0",
